Better logging for UnlockUserAction added Bug in list_users.jsp fixed, the id for the unlock user request was wrong ('c')